--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -1,29 +1,17 @@
 @use "../../styles/variables.scss" as *;
 
-.explorer {
-  display: flex;
-  flex-direction: column;
-  overflow-y: hidden;
-  &.desktop-only {
-    @media all and not ($mobile) {
-      display: flex;
-    }
-  }
-  /*&:after {
-    pointer-events: none;
-    content: "";
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    opacity: 1;
-    transition: opacity 0.3s ease;
-    background: linear-gradient(transparent 0px, var(--light));
-  }*/
+#mobileExplorer.full-page {
+  z-index: 900;
+  display: none;
+  top: 100px !important;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: var(--light);
 }
 
 button#explorer {
+  all: unset;
   background-color: transparent;
   border: none;
   text-align: left;
@@ -33,7 +21,7 @@ button#explorer {
   display: flex;
   align-items: center;
 
-  & h2 {
+  & h1 {
     font-size: 1rem;
     display: inline-block;
     margin: 0;
@@ -67,20 +55,12 @@ button#explorer {
 #explorer-content {
   list-style: none;
   overflow: hidden;
-  overflow-y: auto;
-  max-height: 100%;
-  transition:
-    max-height 0.35s ease,
-    visibility 0s linear 0s;
+  max-height: none;
+  transition: max-height 0.35s ease;
   margin-top: 0.5rem;
-  visibility: visible;
 
-  &.collapsed {
-    max-height: 0;
-    transition:
-      max-height 0.35s ease,
-      visibility 0s linear 0.35s;
-    visibility: hidden;
+  &.collapsed > .overflow::after {
+    opacity: 0;
   }
 
   & ul {
@@ -96,9 +76,6 @@ button#explorer {
       opacity: 0.75;
       pointer-events: all;
     }
-  }
-  > #explorer-ul {
-    max-height: none;
   }
 }
 
